# nanobot-runner

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.example  AGENTS.md  CHANGELOG.md  QWEN.md  README.md  check_feishu_channel.py  config.example.json  coverage_analysis.py  demo-experience.html  pyproject.toml  test_tool_definition.py  作品帖正文.md
.github/workflows/: ci-cd.yml  ci.yml  release-pre-check.yml  release.yml
.trae/: .ignore  Skills协作.md  mcp.json  协作链路.md  完整流程调用规范.md  指令手册.md  智能体标准化执行指令手册.md  智能体标准化执行指令手册_v1.1.0.md  智能体标准化执行指令手册_v1.2.0.md  版本迭代开发最佳实践协作链路.md  版本迭代开发最佳实践协作链路_v1.2.0.md
.trae/agents/: 产品及项目经理.md  代码评审工程师.md  开发工程师.md  架构师.md  测试工程师.md  运维发布工程师.md
.trae/documents/: ci_fix_report.md  ci_fix_report_v2.md  plan.md  pr_body.md  v0.4.0迭代准备阶段执行计划.md  v0.4.3_版本发布工作规划.md  发布 v0.4.0 完整流程指南.md  架构文档修订计划_v0.4.0.md  测试修复计划.md  项目基线分析与下一步工作计划.md
.trae/plans/: v0.3.0_上线前必须完成任务计划.md  v0.4.0_feature_interaction_implementation_plan.md  v0.4.0_版本发布分支准备计划.md
.trae/rules/: common-agents.md  common-coding-style.md  common-development-workflow.md  common-git-workflow.md  common-patterns.md  common-performance.md  common-security.md  common-testing.md  process-rules.md  project-rules.md  project_rules.md  python-coding-style.md  python-patterns.md  python-security.md  python-testing.md  quality-rules.md
docs/: README.md  文档整理与归档方案.md  文档整理清单报告.md
docs/analysis/: 文档分析报告.md
docs/api/: analytics_engine.md  api_reference.md  runner_tools.md
docs/architecture/: ARC_架构设计.md  BUG-001_修复技术设计方案.md  TUI图形界面方案分析.md  core-module-refactor.md  multiagents.md  nanobot-ai底座能力验证报告.md  nanobot-ai配置管理最佳实践.md  upgrade_feasibility_report_GLM5.1.md  upgrade_feasibility_report_GLM5.2.md  upgrade_feasibility_report_comprehensive.md  upgrade_feasibility_report_qwen3.7.md  v0.17.0_架构设计说明书.md  v0.9.0 重构规划方案 评审报告.md  v0.9.0重构规划方案.md  v0.9.2_uv和ruff集成改进方案.md  v0_9_5_架构改进设计说明书.md  v0_9_5_架构评审报告.md  业务配置初始化环节分析.md  定时任务存储方案评估.md  意图解析器功能分析.md  数据删除场景分析报告.md  智能跑步计划架构设计.md  智能跑步计划架构评审报告.md  架构图表集_v0.13-0.15.md  架构治理指南.md  架构设计.md  架构设计_v0.18.0_数据可视化与导出.md  架构设计更新分析报告.md  架构设计更新报告.md  架构设计说明书.md  架构设计说明书_v0.13-0.15.md  架构设计说明书_v0.9.2_uv和ruff集成.md  架构设计说明书_v0.9.3.md  架构评审报告-v0.28.0.md  架构评审报告.md  架构评审报告_v0.13-0.15.md  架构评审报告_v0.17.0.md  架构评审报告_v0.23.0.md  架构评审报告_v0.24.0.md  架构评审报告_v0.25.0.md  (+6 more)
docs/archive/: .gitignore  README.md
docs/book/: 01-为什么要自己打造一个跑步AI教练.md  02-从零到一：构建数据管家.md  03-完整的协作链路：单人也能做好产品.md  04-质量保证体系：如何保证每个版本都靠谱.md  README.md
docs/bugfix/: JSON 配置文件修复报告.md  飞书卡片推送修复报告.md
docs/configuration/: agent_guidelines_template.md  agent_soul_template.md
docs/dev/: DEV_v0.4.1_文档更新报告.md  code_quality_gate_guide.md  config_migration_guide.md  config_validation_examples.md  mypy_configuration_guide.md  pre_commit_guide.md
docs/development/: Bug修复报告.md  Bug修复报告_v0.12.0.md  Bug修复报告_v0.13.0.md  Bug修复报告_v0.14.0.md  Bug修复报告_v0.17.1.md  Bug修复报告_v0.22.0.md  Bug修复报告_v0.30.0.md  Bug修复报告_v0.31.0.md  Bug修复报告_v0.6.0.md  Bug修复报告_v0.9.0.md  Bug修复报告_v0.9.3_用户验收测试修复.md  Bug修复报告_v0.9.4.md  DEV_T008_Agent 系统提示词配置_交付报告_v1.0.0.md  DEV_T009_新增工具注册_交付报告_v1.0.0.md  DEV_T012_报告推送配置_交付报告_v1.0.0.md  DEV_交付报告.md  DEV_测试报告_en.md  T002_画像双存储持久化_开发交付报告_v1.0.0.md  developer_T004_v1.0.0.md  ponytail修复与重构报告_v0.31.0.md  v0.2.0_dev_delivery_report.md  v0.4.0-development-summary.md  v0110_开发交付报告.md  v0120_开发交付报告.md  交付报告_v0.18.0.md  交付报告_v0.19.0.md  交付报告_v0.21.0_digital_twin.md  交付报告_v0.25.0.md  交付报告_v0.9.1.md  优化报告_pre-commit-check_v2.0.md  优化报告_v0.18.0.md  单元测试报告.md  开发交付报告_Sprint2.2_ProfileEngine拆分.md  开发交付报告_Sprint2.3_CLI拆分.md  开发交付报告_Sprint2.4_依赖注入引入.md  开发交付报告_Sprint2.md  开发交付报告_Sprint3.md  开发交付报告_T01315_天气训练协同.md  开发交付报告_v0.10.0.md  开发交付报告_v0.13.0_Sprint3.md  (+14 more)
docs/devops/: 0.4.1版本发布总结报告.md  0.4.1版本发布运维手册.md  CI 急救报告_v0.13.0.md  CICD 验证报告_v0.13.0.md  CICD流水线配置说明.md  FIX-CI报告_v0.24.0.md  FIX-CI报告_v0.31.0_20260711.md  FIX-CI报告_v0.33.0.md  GitHub_Actions_CI修复成功报告.md  GitHub_Actions_修复报告.md  GitHub_Actions_持续修复报告.md  Git分支与发布流程规范.md  OPS-05_运维文档更新报告_v0.2.0.md  OPS_Git分支与发布流程规范.md  OPS_v0.4.0_发布报告.md  OPS_v0.4.1_文档更新报告.md  OPS_项目部署手册.md  SKILL文档改进报告_v1.0.0.md  release.md  release_checklist.md  release_report_v0.15.0.md  v0.12.0_版本发布报告.md  v0.16.0_发布报告.md  v0.16.1_发布报告.md  v0.4.1_文档更新汇总报告.md  v0.4.1_版本发布专项总结会议_完成报告.md  v0.4.1_版本发布专项总结会议纪要.md  v0.4.1_版本发布成功报告.md  v0.4.3_分支管理报告.md  v0.9.2_开发交付报告_uv和ruff集成.md  分支管理与发布流程规范.md  发布报告_0.33.0.md  发布报告_v0.13.0.md  发布报告_v0.17.0.md  发布报告_v0.18.0.md  发布报告_v0.19.0.md  发布报告_v0.20.0.md  发布报告_v0.20.1.md  发布报告_v0.21.0.md  发布报告_v0.22.0.md  (+30 more)
docs/features/: v0.5.0_development_tasks.md  v0.5.0_llm_training_plan.md
docs/guides/: agent_config_guide.md  agent_tools_guide.md  cli_usage.md  development_guide.md  migration_guide_uv_ruff.md  testing_guide.md  troubleshooting.md  新手入门教程.md
docs/history/: VERSION_HISTORY.md
docs/planning/: PLAN_任务拆解_v0.4.0.md  PLAN_任务清单评审报告_v0.4.0.md  PLN_v0.3.0_任务清单.md  PLN_v0.3.0_开发准备报告.md  PLN_开发任务清单.md  execution_plan_v0.22.0.md  implementation_plan_v0.20.1.md  implementation_plan_v0.29.0.md  task_list_0.2.0.md  task_list_v0.10.0-v0.12.0.md  task_list_v0.13-1.0.md  task_list_v0.16.0.md  task_list_v0.17.0.md  task_list_v0.18.0.md  task_list_v0.19.0.md  task_list_v0.20.0.md  task_list_v0.20.1.md  task_list_v0.22.0.md  task_list_v0.23.0.md  task_list_v0.24.0.md  task_list_v0.25.0.md  task_list_v0.26.0.md  task_list_v0.27.0.md  task_list_v0.28.0.md  task_list_v0.29.0.md  task_list_v0.4.0.md  task_list_v0.6.0.md  task_list_v0.9.0.md  task_list_v0.9.2.md  (+4 more)
scripts/: archive_docs.py  archive_missing_docs.py  check_version_consistency.py  diagnose_process_tree.py  fix_readme_version.py  generate_historical_predictions.py  install.sh  measure_baseline.py  pre-commit-check.py  remove_archive_dirs.py  update_archive_zip.py  verify_memory_peak.py
src/: __init__.py  cli.py  cli_formatter.py
templates/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
tests/: __init__.py  conftest.py
webui/: index.html  package-lock.json  package.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
(+1124 files in other folders)
