[project]
name = "nanobot-runner"
version = "0.1.0"
description = "Nanobot Runner - 桌面端私人AI跑步助理"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "nanobot-ai>=0.1.4",
    "typer[all]>=0.12.0",
    "rich>=13.0.0",
    "polars>=0.20.0",
    "pyarrow>=14.0.0",
    "fitparse>=1.1.0",
    "psutil>=7.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
]
dev = [
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "mypy>=1.0.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "safety>=2.0.0,<3.0.0",
    "pre-commit>=3.0.0,<4.0.0",
    "types-requests>=2.0.0",
]

[project.scripts]
nanobotrun = "src.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false  # 暂时关闭Any返回警告
warn_unused_configs = true
disallow_untyped_defs = false  # 暂时允许无类型定义
check_untyped_defs = false  # 暂时关闭无类型定义检查
disallow_incomplete_defs = false  # 暂时允许不完整定义
disallow_untyped_decorators = false  # 暂时允许无类型装饰器
no_implicit_optional = false  # 暂时关闭隐式Optional检查
warn_redundant_casts = false  # 暂时关闭冗余转换警告
warn_unused_ignores = false  # 暂时关闭未使用忽略警告
warn_no_return = false  # 暂时关闭无返回警告

[tool.bandit]
skips = ["B101", "B601"]
targets = ["src"]
recursive = true
exclude_dirs = ["tests", "docs"]

[tool.safety]
output = "json"
ignore = []